erste grobe zusammenfassung der aenderungen - weitere details stehen hier http://cvs.berlios.de/cgi-bin/viewcvs.cgi/ewebuki/basement/

--- a/trunk/basement/docu/CHANGELOG
+++ b/trunk/basement/docu/CHANGELOG
@@ -1,8 +1,268 @@
-====================================================================
-CHANGELOG eWeBuKi
-====================================================================
+================================================================================
+eWeBuKi changelog -
+
+weitere infos im cvs http://cvs.berlios.de/cgi-bin/viewcvs.cgi/ewebuki/basement/
+================================================================================
+
+--- v?.?.?-???? - ??. mon year num
 
 
-version 0.1.1 - 02. feb 2003
-============================
-- first public release
+
+--- 18. sep 2006
+
+subdir support endlich komplett
+
+
+--- 14. sep 2006
+
+warnung: fileed komplett überarbeitet!
+
+cfg, files, templates und db haben sich geändert
+
+-- geloescht werden kann
+
+templates/default ->
+ -939795212.describe.tem.html (heisst jetzt richtig: -939795212.modify.tem.html)
+
+ -939795212.list-head.tem.html (hidedata, dataloop)
+ -939795212.list-foot.tem.html (hidedata, dataloop)
+
+modules/admin ->
+ fileed-preview.inc.php (der neue globale preview wird benutzt)
+ fileed-describe.inc.php (fileed-add.inc.php, fileed-edit.inc.php)
+ fileed-note.inc.php (keine ahnung was das tat)
+ fileed-select.inc.php (sinnlos, jetzt teil von fileed-upload.inc.php)
+
+-- datenbank aenderungen
+
+beschreibung wird zum text file ->
+ALTER TABLE `site_file` CHANGE `fdesc` `fdesc` TEXT NOT NULL;
+
+felder breite einstellen ->
+INSERT INTO `site_form` (`fid`, `flabel`, `ftname`, `fsize`, `fclass`, `fstyle`, `foption`, `frequired`, `fcheck`) VALUES (NULL, 'fdesc', '-939795212.modify', '25', '', '', NULL, '0', '');
+INSERT INTO `site_form` (`fid`, `flabel`, `ftname`, `fsize`, `fclass`, `fstyle`, `foption`, `frequired`, `fcheck`) VALUES (NULL, 'funder', '-939795212.modify', '30', '', '', NULL, '0', '');
+INSERT INTO `site_form` (`fid`, `flabel`, `ftname`, `fsize`, `fclass`, `fstyle`, `foption`, `frequired`, `fcheck`) VALUES (NULL, 'fhit', '-939795212.modify', '30', '', '', NULL, '0', '');
+
+erlaubte file typen erweitern ->
+ALTER TABLE `site_file` CHANGE `ffart` `ffart` ENUM( 'gif', 'jpg', 'png', 'pdf', 'zip', 'odt', 'ods', 'odp', 'gz', 'bz2' ) NOT NULL DEFAULT 'jpg';
+
+aus describe wir modify ->
+UPDATE `site_form` SET `ftname` = '-939795212.modify' WHERE `ftname` = '-939795212.describe';
+UPDATE `site_text` SET `tname` = '-939795212.modify' WHERE `tname` = '-939795212.describe';
+
+
+--- 31. jul 2006 04
+
+datenbank feld site_form_lang  "fchkerror" varchar 255 fehlte in der master db
+
+sql:
+
+ALTER TABLE `site_form_lang` ADD `fchkerror` VARCHAR( 255 ) NOT NULL AFTER `fdberror`
+
+
+--- 31. jul 2006 03
+
+datenbank feld site_form fcheck sollte text sein!
+
+sql:
+
+ALTER TABLE `site_form` CHANGE `fcheck` `fcheck` TEXT NOT NULL
+
+
+--- 31. jul 2006 02
+
+eingabe möglichkeiten im menued einschränken
+
+case-insensitiv: '|[a-z_\.\-0-9]+|i'
+case-sensitiv: '|^[a-z_\.\-0-9]+$|'
+
+sql:
+
+INSERT INTO `site_form` ( `fid` , `flabel` , `ftname` , `fsize` , `fclass` , `fstyle` , `foption` , `frequired` , `fcheck` )
+VALUES ( NULL , 'entry', '-555504947.edit', '0', '', '', NULL , '0', 'PREG:^[a-z_\.\-0-9]+$' );
+INSERT INTO `site_form_lang` ( `flid` , `fid` , `flang` , `fpgenum` , `fwerte` , `ferror` , `fdberror` )
+VALUES ( LAST_INSERT_ID(), LAST_INSERT_ID(), 'de', NULL , '', '', '' );
+
+
+--- 31. jul 2006 02
+
+neuer viewer mit bilderstrecken funktion
+
+
+--- 31. jul 2006 01
+
+unterstuetzung fuer files mit original namen
+siehe conf/file.cfg.php
+
+
+--- 27. jul 2006
+
+modules struktur geaendert
+
+mv modules modules.old
+cvs -z3 -d:pserver:anonymous@cvs.ewebuki.berlios.de:/cvsroot/ewebuki co modules
+
+customer erweiterungen neu einspielen!
+
+
+--- 26. jul 2006
+
+modules/addon/kontakt.inc.php
+modul fuer ein kontakt form
+
+
+--- 11. okt 2005
+
+subdir support - erweiterungen um ewebuki in einem webserver
+unterverzeichnis zu betreiben.
+
+
+--- 15. sep 2005
+
+um weitere ausnahmen im code zu vermeiden, habe ich den namen des
+des template mit dem grundaufabau geaendert.
+
+mv index.tem.html base.tem.html
+
+mit dieser version sind folgende update queries auf die site text
+notwendig.
+
+sql:
+
+UPDATE `site_text` set tname='base' WHERE `tname` LIKE 'index';
+UPDATE `site_text` set tname='index' WHERE `tname` LIKE 'main';
+
+ACHTUNG:
+- die reihenfolge der querys ist wichtig!
+- nicht vergessen eigene designs anzupassen!
+
+
+--- 13. sep 2005
+
+erweiterung fuer addon:changed (last chnaged info)
+
+sql:
+
+ALTER TABLE `site_text`
+ADD `changed` DATETIME NOT NULL ,
+ADD `bysurname` VARCHAR( 40 ) NOT NULL ,
+ADD `byforename` VARCHAR( 40 ) NOT NULL ,
+ADD `byemail` VARCHAR( 60 ) NOT NULL ,
+ADD `byalias` VARCHAR( 20 ) NOT NULL ;
+
+
+--- 18.03.2005 01
+
+speed hack: strstr() -> strpos() !== false
+
+
+--- 18.03.2005 01
+
+neue marke g(label) eine möglichkeit ein label global zu markieren.
+z.B. bei buttons -> einmal beschriften, immer wieder verwenden.
+
+
+--- 11.03.2005
+
+dataloop und datahide
+
+das gleiche spiel wie fuer das loopen im template, gibts jetzt auch als
+verstecken und sichtbar machen. ein gefuelltes $hidedata["wert"] macht
+<!--##hide-wert--> hier <!--##show--> sichtbar. auch hier werden die
+array inhalte in die !{num} bzw !{name} eingespielt. aber im gegensatz
+zu loop nur einmal.
+
+beispiel template:
+<!--##hide-wech--> hier steht es: !{edit} <!--##show-->
+
+beispiel php code:
+$hidedata["wech"]["edit"] = $cfg["basis"]."/edit,".$data["oid"].".html";
+
+
+--- 06. nov 2004
+
+neue version der site text tabelle, macht ein update
+der texte und label zum kinderspiel.
+
+ersetze PRIMARY KEY tid durch PRIMARY KEY aus lang, label, tname
+
+sql:
+
+ALTER TABLE `site_text` DROP `tid`;
+ALTER TABLE `site_text` ADD PRIMARY KEY (`lang`,`label`,`tname`);
+ALTER TABLE `site_text` ORDER BY `lang`, `tname`, `label`;
+
+die aktuelle cms.inc.php kommt mit beiden tabellen zurecht.
+
+dateien im sql/ verzeichnis:
+
+um den original zustand der labels wiederherzustellen, einfach
+mit phpmyadmin die datei "site_text_labl.sql" importieren.
+
+wenn sie bereits eigene seiten erstellt haben, löschen die
+naechsten befehle ihren inhalt!!!
+
+um alle original inhalt texte loszuwerden, ewebuki site_text leeren
+und mit der datei "site_text_labl.sql" neu befüllen.
+
+die original texte kann man mit der datei "site_text_text.sql"
+wiederherstellen.
+
+
+--- 26. jul 2004
+
+aus form_defaults[class][xxxx] wird defaults[form][xxxx][class]
+
+
+--- 22. jan 2003
+
+\config\site.cfg.php
++$specialvars[composite] = 0; // composite ermoeglichen
+
+neue \incs\function.inc.php
+neue \incs\cms.inc.php
+
+
+--- default sprache geaendert
+
+ger -> de
+
+sql:
+
+update `site_text` set lang='de' WHERE lang='ger';
+update `site_menu_lang` set lang='de' WHERE lang='ger';
+update `site_form_lang` set flang='de' WHERE flang='ger';
+
+
+--- composite erweiteung
+
+neues feld 'html' enum(-1,0) in tabelle site_text
+function.inc.php, cms.inc.php changed
+cms.edit.html.tem.html new!
+cms.edit.cmstag.tem.html new!
+cms.edit.tem.html delete
+
+
+--- news erweiterung
+
+$environment[news_uebersicht_pre_len] in news eingefuegt -> config anpassen!
+
+
+--- aus enviroment wird environment !!!!
+
+addon.cfg.php
+news.cfg.php
+linking.inc.php
+index.tem.html
+
+
+--- aenderung mapping
+chaos.php
+// grundmapping main output
+if ( $enviroment[katid] != "" && $enviroment[katid] != "index" ) {
+     $mapping[main] = $enviroment[katid];
+}
+
+
+--- 02. feb 2003
+first public release
