--- a/trunk/basement/modules/README
+++ b/trunk/basement/modules/README
@@ -1,4 +1,5 @@
 addon/ 		- original ewebuki addon modules
 admin/ 		- original ewebuki admin modules
+basic/		- original ewebuki basic modules
 
 customer/ 	- ewebuki customer extensions
