--- a/trunk/basement/docu/CHANGELOG
+++ b/trunk/basement/docu/CHANGELOG
@@ -9,11 +9,23 @@ $Id$
 --- v?.?.?-???? - ??. mon year num
 
 
+--- 17. mai 2007
+
+jetzt funtioniert !#lnk_0, !#ausgaben_UP auch auf der startseite.
+bei diesem fix habe ich auch gleich die kekse.inc.php umgebaut.
+
+achtung: eine neue kekse.cfg.php(-dist) wird benötigt!
+
+
+das ewebuki menu funktioniert nun auch wenn https verwendet wird.
+(global.inc.php, main.php angepasst)
+
+
 --- 29. mar 2007
 
 ewebuki teilt jetzt den hauptbereich (default = inhalt) einer seite in sektionen.
 ein tag (default = [H) dient dabei als Trenner. laestiges scrollen bei
-viel content auf einer seite ist damit nicht mehr noetig. marke und tag sind 
+viel content auf einer seite ist damit nicht mehr noetig. marke und tag sind
 natuerlich einstellbar siehe: site.cfg.php, overwrite.cfg.php
 
 
