--- a/trunk/basement/modules/README
+++ b/trunk/basement/modules/README
@@ -1,5 +1,6 @@
 addon/ 		- original ewebuki addon modules
 admin/ 		- original ewebuki admin modules
 basic/		- original ewebuki basic modules
+libraries/	- original ewebuki shared libraries
 
 customer/ 	- ewebuki customer extensions
