sql PREG war falsch escaped!

--- a/trunk/basement/docu/CHANGELOG
+++ b/trunk/basement/docu/CHANGELOG
@@ -104,12 +104,12 @@ mit folgenden fcheck eintraegen möglich:
 -> z.B. PREG:^[a-z_\-\.0-9]+$
 
 INSERT INTO `site_form` (`flabel`, `ftname`, `fsize`, `frequired`, `fcheck`)
- VALUES ('entry', '-555504947.add', '0', '-1', 'PREG:^[a-z_\-\.0-9]+$');
+ VALUES ('entry', '-555504947.add', '0', '-1', 'PREG:^[a-z_\\-\\.0-9]+$');
 INSERT INTO `site_form_lang` (`flid`, `fid`, `flang`, `fchkerror`)
  VALUES (LAST_INSERT_ID(), LAST_INSERT_ID(), 'de', 'Ungültige Zeichen im Feld Eintrag.');
 
 INSERT INTO `site_form` (`flabel`, `ftname`, `fsize`, `frequired`, `fcheck`)
- VALUES ('entry', '-555504947.edit', '0', '-1', 'PREG:^[a-z_\-\.0-9]+$');
+ VALUES ('entry', '-555504947.edit', '0', '-1', 'PREG:^[a-z_\\-\\.0-9]+$');
 INSERT INTO `site_form_lang` (`flid`, `fid`, `flang`, `fchkerror`)
  VALUES (LAST_INSERT_ID(), LAST_INSERT_ID(), 'de', 'Ungültige Zeichen im Feld Eintrag.');
 
@@ -272,7 +272,7 @@ case-sensitiv: ^[a-z_\.\-0-9]+$
 sql:
 
 INSERT INTO `site_form` ( `fid` , `flabel` , `ftname` , `fsize` , `fclass` , `fstyle` , `foption` , `frequired` , `fcheck` )
-VALUES ( NULL , 'entry', '-555504947.edit', '0', '', '', NULL , '-1', 'PREG:^[a-z_\.\-0-9]+$' );
+VALUES ( NULL , 'entry', '-555504947.edit', '0', '', '', NULL , '-1', 'PREG:^[a-z_\\.\\-0-9]+$' );
 INSERT INTO `site_form_lang` ( `flid` , `fid` , `flang` , `fpgenum` , `fwerte` , `ferror` , `fdberror`, `fchkerror` )
 VALUES ( LAST_INSERT_ID(), LAST_INSERT_ID(), 'de', NULL , '', '', '', 'Ungültige Zeichen im Feld Eintrag.' );
 
