--- a/trunk/basement/docu/CHANGELOG
+++ b/trunk/basement/docu/CHANGELOG
@@ -14,15 +14,34 @@ aufgrund der anpassungen am leveled bzw. usered wird das feld rid nicht mehr
 benoetigt, ein neuer index auf uid, lid ersetzt dessen funktion.
 
 ausserdem benoetigt der zukuenftige grouped zwei neue tabellen.
+fuer das zukuenftige rechte-konzept wurden zwei weitere tabellen erstellt
 
 sql:
 
 ALTER TABLE `auth_right` DROP `rid`;
 ALTER TABLE `auth_right` ADD PRIMARY KEY (`uid`,`lid`);
 
+CREATE TABLE `auth_content` (
+  `uid` int(11) NOT NULL,
+  `gid` int(11) NOT NULL,
+  `pid` int(11) NOT NULL,
+  `db` varchar(20) NOT NULL,
+  `tname` varchar(50) NOT NULL,
+  `ebene` text NOT NULL,
+  `kategorie` text NOT NULL,
+  PRIMARY KEY  (`uid`,`gid`,`pid`,`db`,`tname`)
+) ENGINE=MyISAM;
+
+
+CREATE TABLE `auth_priv` (
+  `pid` int(11) NOT NULL,
+  `priv` varchar(20) NOT NULL,
+  PRIMARY KEY  (`pid`)
+) ENGINE=MyISAM;
+
 CREATE TABLE `auth_group` (
   `gid` int(11) NOT NULL auto_increment,
-  `group` varchar(10) NOT NULL,
+  `ggroup` varchar(30) NOT NULL,
   `beschreibung` text NOT NULL,
   PRIMARY KEY  (`gid`)
 ) ENGINE=MyISAM;
